# wertbegleiter

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture_gap_analysis.md  chatgpt_trading_project_context.md  cloudflare_worker_bridge_setup.md  functionality_audit_2026-07-01.md  git_setup.md  kas_webhook_bridge_setup.md  live_source_setup.md  operations_runbook.md  permanent_tunnel_setup.md  provider_connections.md  tradingfreaks_data_sources.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: test_api_routes.py  test_backtesting.py  test_chatgpt_update_feed.py  test_cloudflare_worker_bridge.py  test_daily_update.py  test_gbe_report_import.py  test_infrastructure_readiness.py  test_journal_review.py  test_kas_bridge.py  test_live_adapters.py  test_live_bridge.py  test_live_collector.py  test_live_config.py  test_live_data.py  test_models.py  test_morning_brief.py  test_news_deck.py  test_realtime_update_service.py  test_risk_position_sizing.py  test_session_playbook.py  test_setup_checklists.py  test_tradingview_capture_tool.py  test_tradingview_webhook_setup.py  test_us_news_breakout_checklist.py
tools/: build_chatgpt_update_feed.py  build_live_adapter_config_status.py  build_live_feed_status.py  capture_tradingview_event.py  check_infrastructure_readiness.py  check_tradingview_webhook_setup.py  extract_training_source_snippets.py  import_gbe_eod_report.py  ingest_live_source.py  pull_cloudflare_worker_bridge.py  pull_kas_webhook_bridge.py  register_tradingview_public_webhooks.py  run_configured_live_adapters.py  (+6 more)
(+59 files in other folders)
