[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-freaks-decision-support"
version = "0.1.0"
description = "Rule-based TradingFreaks decision support core without live trading."
requires-python = ">=3.9"
dependencies = ["pypdf>=4"]

[tool.setuptools.packages.find]
where = ["src"]
